--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "chai-or-backend",
   "version": "1.0.0",
   "description": "a backend in at chai or code channel",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javaScript",
     "Backend"
   ],
   "author": "Ajay",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "i": "^0.3.7",
+    "nodemon": "^3.1.7"
+  }
 }
